rectifying the alignment issue of contact us section

--- a/salon/static/salon/css/main_page.css
+++ b/salon/static/salon/css/main_page.css
@@ -135,7 +135,7 @@ header {
   margin-bottom: 30px;
   text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.10);
   color: #c86b85;
-  margin-top:80px
+  margin-top:0px
 }
 
 .services h2::after {
